instructor-dashboard/tenant/instructor-dashboard/templates/pushgateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  labels:
    app.kubernetes.io/name: pushgateway-service
    app.kubernetes.io/component: pushgateway
    app.kubernetes.io/part-of: instructor-dashboard
spec:
  selector:
    app.kubernetes.io/name: pushgwateway
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
